inital work on integrated-retrieve endpoint
