# cedar-terminology-server-application/src/main/java/org/metadatacenter/cedar/terminology/resources/bioportal/IntegratedRetrieveResource.java
@@ -2,7 +2,7 @@ package org.metadatacenter.cedar.terminology.resources.bioportal;
 
 import com.codahale.metrics.annotation.Timed;
 import org.metadatacenter.cedar.terminology.resources.AbstractTerminologyServerResource;
-import org.metadatacenter.cedar.terminology.validation.integratedsearch.IntegratedSearchBody;
+import org.metadatacenter.cedar.terminology.validation.integratedsearch.IntegratedRetrieveBody;
 import org.metadatacenter.config.CedarConfig;
 import org.metadatacenter.exception.CedarException;
 import org.metadatacenter.rest.exception.CedarAssertionException;
@@ -18,38 +18,34 @@ import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import javax.xml.ws.http.HTTPException;
 import java.io.IOException;
-import java.util.Optional;
 
 @Path("/bioportal")
 @Produces(MediaType.APPLICATION_JSON)
-public class IntegratedSearchResource extends AbstractTerminologyServerResource {
+public class IntegratedRetrieveResource extends AbstractTerminologyServerResource {
 
-  public IntegratedSearchResource(CedarConfig cedarConfig) {
+  public IntegratedRetrieveResource(CedarConfig cedarConfig) {
     super(cedarConfig);
   }
 
   /**
-   * Search for classes, value sets and values
+   * Get all values for a specified value constraint
    */
   @POST
   @Timed
-  @Path("/integrated-search")
+  @Path("/integrated-retrieve")
   @Consumes(MediaType.APPLICATION_JSON)
-  public Response cedarIntegratedSearch(@Valid IntegratedSearchBody body) throws CedarException {
+  public Response cedarIntegratedRetrieve(@Valid IntegratedRetrieveBody body) throws CedarException {
 
-    // We have disabled authentication for this endpoint to simplify 3rd-party deployments of the CEDAR embeddable editor
+    //TODO
     // CedarRequestContext c = buildRequestContext();
     // c.must(c.user()).be(LoggedIn);
 
     try {
       int page = extractPage(body);
       int pageSize = extractPageSize(body);
-      String inputText = extractInputText(body);
-      Optional<String> q = inputText != null? Optional.of(inputText) : Optional.empty();
 
       PagedResults results =
-          terminologyService.integratedSearch(q, body.getParameterObject().getValueConstraints(),
-              page, pageSize, apiKey);
+        terminologyService.integratedRetrieve(body.getValueConstraints(), page, pageSize, apiKey);
 
       return Response.ok().entity(JsonMapper.MAPPER.valueToTree(results)).build();
 
@@ -60,11 +56,7 @@ public class IntegratedSearchResource extends AbstractTerminologyServerResource 
     }
   }
 
-  /**
-   * Utility Methods
-   **/
-
-  public int extractPage(IntegratedSearchBody body) {
+  public int extractPage(IntegratedRetrieveBody body) {
     int page = body.getPage();
     // If page not defined or invalid, set it to the first page
     if (page <= 0) {
@@ -73,7 +65,7 @@ public class IntegratedSearchResource extends AbstractTerminologyServerResource 
     return page;
   }
 
-  public int extractPageSize(IntegratedSearchBody body) {
+  public int extractPageSize(IntegratedRetrieveBody body) {
     int pageSize = body.getPageSize();
     // If pageSize not defined or invalid, set it to the default value
     if (pageSize <= 0) {
@@ -81,14 +73,4 @@ public class IntegratedSearchResource extends AbstractTerminologyServerResource 
     }
     return pageSize;
   }
-
-  public String extractInputText(IntegratedSearchBody body) {
-    String inputText = body.getParameterObject().getInputText();
-    if (inputText != null && inputText.trim().length() > 0) {
-      return inputText;
-    } else {
-      return null;
-    }
-  }
-
 }
